--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -5,7 +5,7 @@
   top: 0;
   bottom: 0;
   left: 0;
-  z-index: 100000;
+  z-index: 10000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,6 +14,10 @@
 
   &.fullScreen {
     position: fixed;
+  }
+
+  &.opacity {
+    opacity: 0.75;
   }
 
   .warpper {
